# 3-python-package-exercise-leftovers3

./: Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/petmagotchi/: __init__.py  __main__.py  pet.py
tests/: testPet.py  test_bring_to.py  test_create_pet_and_status.py  test_feed_and_water.py  test_load_pet.py  test_pet.py  test_pet_image.py  test_play.py  test_save_pet.py  test_wash.py
