[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petmagotchi"
description = "A fun Tamagotchi and pet simulation package!"
version = "0.1.0"
authors = [
  { name="Capks", email="capks@placeholder.com" },
  { name="Allyson", email="abc9295@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "pet", "simulation", "virtual pet", "tamagotchi"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-leftovers3"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-leftovers3.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-leftovers3/issues"

[project.scripts]
petmagotchi = "petmagotchi.__main__:main"
